Fix bootstrap horizontal overflow caused by negative margins

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,16 @@ body {
   padding: 0;
 }
 
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.container .row {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
 /* 
 =================================================
   BUTTON
